--- a/css/style.css
+++ b/css/style.css
@@ -8,46 +8,71 @@ body {
     --pimary-link-color: #FFFFFF;
     --accent-color: #2196F3;
 }
+h1, 
+h2,
+h3,
+h4,
+h5,
+h6,
+p, {
+    margin: 0px;
+}
+ul {
+    margin: 0px;
+    padding-left: 0px;
+}
+button {
+    cursor: pointer;
+}
+.section {
+    margin-bottom: 94px;
+}
+ 
 
 body, footer {
-font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 a {
-text-decoration: none;
+    text-decoration: none;
 }
 .visually-hidden {
-position: absolute;
-width: 1px;
-height: 1px;
-margin: -1px;
-border: 0;
-padding: 0;
-white-space: nowrap;
-clip-path: inset(100%);
-clip: rect(0 0 0 0);
-overflow: hidden;
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+.container {
+    width: 1200px;
+    padding: 15px;
+    margin: 0 auto;
 }
 .link {
-text-decoration: none;
+    text-decoration: none;
 }
 .list {
-list-style: none;
+    list-style: none;
 }
 /* --------Header-------- */
 .header-logo {
-font-family: 'Raleway';
-font-style: normal;
-font-weight: 700;
-font-size: 26px;
-line-height: 1.19;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
 /* identical to box height */
-letter-spacing: 0.03em;
+    letter-spacing: 0.03em;
 }
 a.header-logo {
-color: #2196F3;
+    color: #2196F3;
 }
 span.header-logo {
-color: #000000;
+    color: #000000;
 }
 .header-link:hover,
 .header-link:focus,
@@ -55,182 +80,236 @@ color: #000000;
 .header-mail:focus,
 .header-tel:hover,
 .header-tel:focus{
-color: var(--accent-color);
+    color: var(--accent-color);
+}
+.dask {
+    display: flex;
+    align-items: center;
+}
+.header-list {
+    display: flex;
+}
+.header-list .item + .item {
+    margin-left: 50px;
 }
 .header-link {
-font-weight: 500;
-font-size: 14px;
-line-height: 1,14;
-letter-spacing: 0.02em;
-color: var(--primary-header-color);
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1,14;
+    letter-spacing: 0.02em;
+    color: var(--primary-header-color);
+    
+}
+.list {
+    display: flex;
+}
+.list .items + .items {
+    margin-left: 30px;
 }
 .header-mail {
-font-weight: 500;
-font-size: 14px;
-line-height: 1,14;
-letter-spacing: 0.02em;
-color: var(--third-header-color);
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1,14;
+    letter-spacing: 0.02em;
+    color: var(--third-header-color);
 }
 .header-tel {
-font-weight: 500;
-font-size: 14px;
-line-height: 1,14;
-letter-spacing: 0.02em;
-color: var(--third-header-color);
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1,14;
+    letter-spacing: 0.02em;
+    color: var(--third-header-color);
 }
 /* --------Main-hero-------- */
 .hero {
-background-color: #2F303A;
+    background-color: #2F303A;
+}
+.hero{
+    margin-bottom: 100px;
 }
 .hero-title {
-font-weight: 900;
-font-size: 44px;
-line-height: 1,36;
+    margin-bottom: 40px;
+
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1,36;
  /* or 136% */
-text-align: center;
-letter-spacing: 0.06em;
-text-transform: uppercase;
-color: var(--second-header-color);
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: var(--second-header-color);
 }
 .main-button {
-font-family: inherit;
-font-weight: 700;
-font-size: 16px;
-line-height: 1,87;
+    font-family: inherit;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1,87;
 /* identical to box height, or 188% */
-display: flex;
-align-items: center;
-text-align: center;
-letter-spacing: 0.06em;
-color: var(--second-header-color);
-border: transparent;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: var(--second-header-color);
+    border: transparent;
 }
 .main-button {
-background-color: var(--accent-color);
+    background-color: var(--accent-color);
 }
 /* --------Main-Advantages--------- */
+
 .advantages-title {
-font-weight: 700;
-font-size: 14px;
-line-height: 1,14;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: var(--primary-header-color);
+    margin-bottom: 10px;
+
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1,14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--primary-header-color);
 }
 .advantages-text {
-font-weight: 400;
-font-size: 14px;
-line-height: 1,71;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1,71;
 /* or 171% */
-letter-spacing: 0.03em;
-color: var(--third-header-color);
+    letter-spacing: 0.03em;
+    color: var(--third-header-color);
 }
 /* --------Main-Directions--------- */
 .directions-title {
-font-weight: 700;
-font-size: 36px;
-line-height: 1,16;
-text-align: center;
-letter-spacing: 0.03em;
-color: var(--primary-header-color);
+    margin-bottom: 50px;
+
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1,16;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--primary-header-color);
 }
 /* --------Main-Team---------- */
 .team-title {
-font-weight: 700;
-font-size: 36px;
-line-height: 1,16;
-text-align: center;
-letter-spacing: 0.03em;
-color: var(--primary-header-color);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1,16;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--primary-header-color);
 }
 .team-caption {
-font-weight: 500;
-font-size: 16px;
-line-height: 1,18;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1,18;
 /* identical to box height */
-text-align: center;
-letter-spacing: 0.03em;
-color: var(--primary-header-color);
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--primary-header-color);
 }
 .team-text {
-font-weight: 400;
-font-size: 16px;
-line-height: 1,18;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1,18;
 /* identical to box height */
-text-align: center;
-letter-spacing: 0.03em;
-color: var(--third-header-color);
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--third-header-color);
 }
 /* --------Footer---------- */
 .footer {
-background-color: #2F303A;
+    background-color: #2F303A;
 }
 .footer-logo {
 
 }
 a.footer-logo {
-color: #2196F3;
+    color: #2196F3;
 }
 span.footer-logo {
-color: #FFFFFF;
+    color: #FFFFFF;
 }
 .footer-all {
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 1,71;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1,71;
 /* or 171% */
-letter-spacing: 0.03em;
-color: var(--pimary-link-color);
+    letter-spacing: 0.03em;
+    color: var(--pimary-link-color);
 }
 .footer-mail {
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 1,71;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1,71;
 /* or 171% */
-letter-spacing: 0.03em;
-color: rgba(255, 255, 255, 0.6);
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
 }
 .footer-tel {
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 1,71;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1,71;
 /* or 171% */
-letter-spacing: 0.03em;
-color: rgba(255, 255, 255, 0.6);
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
 }
 /* --------Portfolio-------- */
-.portfolio-title {
-font-weight: 700;
-font-size: 18px;
-line-height: 2,00;
-/* identical to box height, or 200% */
-letter-spacing: 0.06em;
-color: var(--primary-header-color);
-}
-.portfolio-text {
-font-weight: 400;
-font-size: 16px;
-line-height: 1,87;
-/* identical to box height, or 188% */
-letter-spacing: 0.03em;
-color: var(--third-header-color);
-}
 .btn-button {
-font-weight: 500;
-font-size: 16px;
-line-height: 2,16;
+    margin-bottom: 34px;
+
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 2,16;
 /* identical to box height, or 162% */
-text-align: center;
-letter-spacing: 0.03em;
-color: var(--primary-header-color);
-cursor: pointer;
-border: transparent;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--primary-header-color);
+    cursor: pointer;
+    border: transparent;
 }
 .btn-button:hover,
 .btn-button:focus{
-color: var(--second-header-color);
-background-color: var(--accent-color);
+    color: var(--second-header-color);
+    background-color: var(--accent-color);
+}
+.portfolio-list .items {
+    width: calc((100%-120px) / 3;
+}
+.btn-list .portfolio-control + .portfolio-control {
+    margin-left: 8px;
+}
+.portfolio-list {
+    margin-bottom: 20px;
+    display: flex;
+    flex-wrap: wrap;
+}
+.portfolio-title {
+    margin-bottom: 4px;
+
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2,00;
+/* identical to box height, or 200% */
+    letter-spacing: 0.06em;
+    color: var(--primary-header-color);
+}
+.portfolio-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1,87;
+/* identical to box height, or 188% */
+    letter-spacing: 0.03em;
+    color: var(--third-header-color);
 }
