--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
     --third-header-color: #757575;
     --pimary-link-color: #FFFFFF;
     --accent-color: #2196F3;
+    --advantages-color: #F5F4FA;
 }
 h1, 
 h2,
@@ -59,13 +60,13 @@ a {
     align-items: center;
 }
 .header-logo {
+    display: flex;
     margin-right: 93px;
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
-/* identical to box height */
     letter-spacing: 0.03em;
 }
 a.header-logo {
@@ -107,6 +108,12 @@ span.header-logo {
     display: flex;
     margin-left: auto;
 }
+.list .items-subject + .items-subject {
+    margin-left: 30px;
+}
+.list .items-img + .items-img {
+    margin-left: 30px;
+}
 .list .items + .items {
     margin-left: 30px;
 }
@@ -129,10 +136,29 @@ span.header-logo {
     letter-spacing: 0.02em;
     color: var(--third-header-color);
 }
+.list-soc-icons {
+    width: 16px;
+    height: 12px;
+}
+.items-soc {
+    display: flex;
+}
+.list-soc-icons {
+    margin-right: 10px;
+}
 /* --------Main-hero-------- */
 .hero {
+    max-width: 1600px;
+    max-height: 600px;
     padding: 200px 0px;
+    margin: 0 auto;
     background-color: #2F303A;
+    background-size: cover;
+    background-position: center;
+    background-image: linear-gradient(to right, 
+    rgba(47, 48, 58, 0.4),
+    rgba(47, 48, 58, 0.4)),
+     url(../imge/Img-hero.jpg);
 }
 .hero-title {
     margin-bottom: 40px;
@@ -140,7 +166,7 @@ span.header-logo {
     font-weight: 900;
     font-size: 44px;
     line-height: 1,36;
- /* or 136% */
+ 
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
@@ -156,7 +182,7 @@ span.header-logo {
     font-weight: 700;
     font-size: 16px;
     line-height: 1,87;
-/* identical to box height, or 188% */
+
     display: flex;
     align-items: center;
     text-align: center;
@@ -167,10 +193,34 @@ span.header-logo {
 .main-button {
     background-color: var(--accent-color);
 }
-/* --------Main-Advantages--------- */
+/* --------Main advantages переваги--------- */
 .section {
     padding-top: 94px;
     padding-bottom: 94px;
+}
+.items-subject {
+    width: 270px;
+    height: 246px;
+}
+/* .items-subject ::before {
+    display: block
+    content: "" ;
+    height: 120px;
+    background-size:containe;
+    background-repeat: no repeat;
+    background-pozition: center;
+    background-color: #F5F4FA;
+} */
+.thumb {
+    padding: 25px 100px;
+    margin-bottom: 30px;
+    background-color: #F5F4FA;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.thumb-soc-icons {
+    height: 120px;
 }
 .advantages-title {
     margin-bottom: 10px;
@@ -186,11 +236,12 @@ span.header-logo {
     font-weight: 400;
     font-size: 14px;
     line-height: 1,71;
-/* or 171% */
+
     letter-spacing: 0.03em;
     color: var(--third-header-color);
 }
-/* --------Main-Directions--------- */
+
+/* --------Main directions приклади робіт--------- */
 .directions {
     padding-bottom: 94px;
 }
@@ -204,7 +255,7 @@ span.header-logo {
     letter-spacing: 0.03em;
     color: var(--primary-header-color);
 }
-/* --------Main-Team---------- */
+/* --------Main team section члени команди---------- */
 .items-img {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
@@ -224,7 +275,7 @@ span.header-logo {
     font-weight: 500;
     font-size: 16px;
     line-height: 1,18;
-/* identical to box height */
+
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--primary-header-color);
@@ -233,11 +284,42 @@ span.header-logo {
     font-weight: 400;
     font-size: 16px;
     line-height: 1,18;
-/* identical to box height */
+
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--third-header-color);
 }
+.team-soc-list {
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.team-soc-items {
+    width: 44px;
+    height: 44px;
+}
+.team-soc-items:not(:last-child) {
+    margin-right: 10px;
+}
+.team-soc-link {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    fill: #AFB1B8;
+}
+.team-soc-link:hover {
+    background-color: var(--accent-color);
+}
+.team-soc-icons {
+    width: 20px;
+    height: 20px;
+}
+/* --------Main company section постійні кліенти---------- */
+
 /* --------Footer---------- */
 .footer {
     padding-top: 60px;
@@ -265,7 +347,6 @@ span.footer-logo {
     font-weight: 400;
     font-size: 14px;
     line-height: 1,71;
-/* or 171% */
     letter-spacing: 0.03em;
     color: var(--pimary-link-color);
 }
@@ -274,7 +355,6 @@ span.footer-logo {
     font-weight: 400;
     font-size: 14px;
     line-height: 1,71;
-/* or 171% */
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
 }
@@ -283,9 +363,41 @@ span.footer-logo {
     font-weight: 400;
     font-size: 14px;
     line-height: 1,71;
-/* or 171% */
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
+}
+.teams-soc-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 206px;
+    height: 80px;
+}
+.teams-soc-items {
+    width: 44px;
+    height: 44px;
+}
+.teams-soc-items:not(:last-child) {
+    margin-right: 10px;
+}
+.teams-soc-link {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    fill: #FFFFFF;
+}
+.teams-soc-link:hover {
+    background-color: var(--accent-color);
+}
+.teams-soc-icons {
+    width: 20px;
+    height: 20px;
+}
+.title-items {
+    color: var(--pimary-link-color);
 }
 /* --------Portfolio-------- */
 .portfolio-header {
@@ -300,7 +412,7 @@ span.footer-logo {
     font-weight: 500;
     font-size: 16px;
     line-height: 2,16;
-/* identical to box height, or 162% */
+
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--primary-header-color);
@@ -343,7 +455,7 @@ span.footer-logo {
     font-weight: 700;
     font-size: 18px;
     line-height: 2,00;
-/* identical to box height, or 200% */
+
     letter-spacing: 0.06em;
     color: var(--primary-header-color);
 }
@@ -354,7 +466,7 @@ span.footer-logo {
     font-weight: 400;
     font-size: 16px;
     line-height: 1,87;
-/* identical to box height, or 188% */
+
     letter-spacing: 0.03em;
     color: var(--third-header-color);
 }
@@ -364,3 +476,11 @@ span.footer-logo {
     margin-left: auto;
     margin-right: auto; 
 }
+.list-portfolio.items :hover {
+    box-shadow (0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.portfolio-control :hover,
+.portfolio-control :focus {
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
