--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ a {
 }
 .container {
     width: 1200px;
-    padding: 15px;
+    padding: 15px 0;
     margin: 0 auto;
 }
 .link {
@@ -202,15 +202,6 @@ span.header-logo {
     width: 270px;
     height: 246px;
 }
-/* .items-subject ::before {
-    display: block
-    content: "" ;
-    height: 120px;
-    background-size:containe;
-    background-repeat: no repeat;
-    background-pozition: center;
-    background-color: #F5F4FA;
-} */
 .thumb {
     padding: 25px 100px;
     margin-bottom: 30px;
@@ -220,7 +211,7 @@ span.header-logo {
     align-items: center;
 }
 .thumb-soc-icons {
-    height: 120px;
+    height: 70px;
 }
 .advantages-title {
     margin-bottom: 10px;
@@ -233,6 +224,7 @@ span.header-logo {
     color: var(--primary-header-color);
 }
 .advantages-text {
+    margin-bottom: 0;
     font-weight: 400;
     font-size: 14px;
     line-height: 1,71;
@@ -247,6 +239,7 @@ span.header-logo {
 }
 .directions-title {
     margin-bottom: 50px;
+    margin-top: 0;
 
     font-weight: 700;
     font-size: 36px;
@@ -264,6 +257,7 @@ span.header-logo {
     background-color: #F5F4FA;
 }
 .team-title {
+    margin-top: 0;
     font-weight: 700;
     font-size: 36px;
     line-height: 1,16;
@@ -318,23 +312,52 @@ span.header-logo {
     width: 20px;
     height: 20px;
 }
-/* --------Main company section постійні кліенти---------- */
-.company-section {
-    height: 252px;
+.team-soc-list  .team-soc-link:hover,
+.team-soc-list  .team-soc-link:focus{
+    fill: white;
+    background-color: #2196F3;
 }
+/* --------Main company section постійні кліенти---------- */
 .company {
-    width: 1170px;
-    height: 182px;
+    margin-bottom: 50px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
+
+    color: #212121
+}
+.compa-list {
     display: flex;
 }
 .compani-items {
-    width: 170px;
-    height: 92px;
-    padding: 30px 64px;
     display: flex;
 }
-
-
+.thumb-company-icons{
+    display: block;
+    width: 106px;
+    height: 60px;
+    fill: #afb1b8
+}
+.lead {
+    display: block;
+    width: 170px;
+    height: 92px;
+    text-decoration: none;
+    fill: #AFB1B8;
+    border: 1px solid #AFB1B8;
+    border-radius: 4px;
+    padding: 16px 32px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.compa-list .lead:hover,
+.compa-list .lead:focus{
+    fill:  #2196F3;
+    border-radius: 4px;
+    border-color:  #2196F3;
+}
 /* --------Footer---------- */
 .footer {
     padding-top: 60px;
