--- a/css/style.css
+++ b/css/style.css
@@ -358,6 +358,12 @@ span.header-logo {
     border-radius: 4px;
     border-color:  #2196F3;
 }
+.compa-list li{ 
+    margin-right: 30px; 
+    } 
+.compa-list li:nth-child(6){ 
+    margin-right: 0; 
+    }
 /* --------Footer---------- */
 .footer {
     padding-top: 60px;
@@ -403,6 +409,13 @@ span.footer-logo {
     line-height: 1,71;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
+}
+.asid {
+    display: flex;
+}
+.tip {
+    display: flex;
+    margin-left: 70px;
 }
 .teams-soc-list {
     display: flex;
