--- a/css/style.css
+++ b/css/style.css
@@ -481,6 +481,11 @@ span.footer-logo {
     color: var(--second-header-color);
     background-color: var(--accent-color);
 }
+.btn-button:hover,
+.btn-button:focus {
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
 .btn-list {
     margin-left: auto;
     margin-right: auto;
@@ -527,11 +532,8 @@ span.footer-logo {
     margin-left: auto;
     margin-right: auto; 
 }
-.list-portfolio.items :hover {
-    box-shadow (0px 4px 4px rgba(0, 0, 0, 0.25));
-}
-.portfolio-control :hover,
-.portfolio-control :focus {
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+.items-pic:hover,
+.items-pic:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
