--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,23 @@ span.header-logo {
 .list-soc-icons {
     margin-right: 10px;
 }
+.list .link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 0;
+    fill: #757575; 
+    color: #757575;
+    text-decoration: none;
+    font-weight: 500;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+}
+.list .link:hover,
+.list .link:focus {
+    color: #2196F3;
+    fill: #2196F3;
+}
 /* --------Main-hero-------- */
 .hero {
     max-width: 1600px;
@@ -339,9 +356,14 @@ span.header-logo {
     display: block;
     width: 106px;
     height: 60px;
-    fill: #afb1b8
 }
-.lead {
+.compa-list li{ 
+    margin-right: 30px; 
+} 
+.compa-list li:nth-child(6){ 
+    margin-right: 0; 
+}
+.list .lead {
     display: block;
     width: 170px;
     height: 92px;
@@ -352,23 +374,20 @@ span.header-logo {
     padding: 16px 32px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.compa-list .lead:hover,
-.compa-list .lead:focus{
+.list .lead:hover,
+.list .lead:focus {
     fill:  #2196F3;
     border-radius: 4px;
     border-color:  #2196F3;
 }
-.compa-list li{ 
-    margin-right: 30px; 
-    } 
-.compa-list li:nth-child(6){ 
-    margin-right: 0; 
-    }
 /* --------Footer---------- */
 .footer {
     padding-top: 60px;
     padding-bottom: 60px;
     background-color: #2F303A;
+}
+.address-footer {
+    display: flex;
 }
 a.footer-logo {
     color: #2196F3;
@@ -410,11 +429,7 @@ span.footer-logo {
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
 }
-.asid {
-    display: flex;
-}
 .tip {
-    display: flex;
     margin-left: 70px;
 }
 .teams-soc-list {
@@ -448,6 +463,8 @@ span.footer-logo {
     height: 20px;
 }
 .title-items {
+    margin-bottom: 0;
+    margin-top: 0;
     color: var(--pimary-link-color);
 }
 /* --------Portfolio-------- */
